@@ -28,6 +28,7 @@ import androidx.annotation.NonNull;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * Represents the bounds of search matches as a {@code List<List<Rect>>}, where
@@ -107,13 +108,13 @@ public class MatchRects extends ListOfList<Rect> {
         for (int index = 0; index < mMatchToRect.size(); index++) {
             List<Rect> bounds = new ArrayList<>();
             int boundsForCurrentMatch = (index + 1 < mMatchToRect.size()) ? mMatchToRect.get(
-                    index + 1)
-                    : mRects.size();
+                    index + 1) : mRects.size();
             for (int boundIndex = mMatchToRect.get(index); boundIndex < boundsForCurrentMatch;
                     boundIndex++) {
                 bounds.add(mRects.get(boundIndex));
             }
-            matches.add(new PageMatchBounds(bounds.stream().map(RectF::new).toList(),
+            matches.add(new PageMatchBounds(
+                    bounds.stream().map(RectF::new).collect(Collectors.toList()),
                     mCharIndexes.get(index)));
         }
 
